--- a/package.json
+++ b/package.json
@@ -1,29 +1,30 @@
 {
-  "name": "SED_LAB",
+  "name": "node-mongodb-crud",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/Cj72001/SED_LAB.git"
-  },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/Cj72001/SED_LAB/issues"
-  },
-  "homepage": "https://github.com/Cj72001/SED_LAB#readme",
   "dependencies": {
-    "ejs": "^3.1.6",
+    "dotenv": "^10.0.0",
     "express": "^4.17.1",
-    "mongoose": "^6.0.13",
+    "express-handlebars": "^5.3.4",
+    "mongoose": "^6.0.11",
     "morgan": "^1.10.0"
   },
   "devDependencies": {
-    "nodemon": "^2.0.15"
-  }
+    "@babel/cli": "^7.15.7",
+    "@babel/core": "^7.15.8",
+    "@babel/node": "^7.15.8",
+    "@babel/plugin-transform-runtime": "^7.15.8",
+    "@babel/preset-env": "^7.15.8",
+    "ncp": "^2.0.0",
+    "nodemon": "^2.0.13"
+  },
+  "scripts": {
+    "dev": "nodemon ./src --exec babel-node",
+    "build": "babel src -d dist && ncp src/views dist/views && ncp src/public dist/public",
+    "start": "node ./dist"
+  },
+  "keywords": [],
+  "author": "",
+  "license": "ISC"
 }
